--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,37 +13,39 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-30 Fri 11:10]
+#+CAPTION: Clock summary at [2016-09-30 Fri 12:37]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *25:08* |       |      | 100.0 |
+| *Total time*                                                                | *26:47* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 25:08   |       |      | 100.0 |
-| Active                                                                      |         | 25:08 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.5 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   9.9 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.3 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   7.0 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.5 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.3 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.2 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.8 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.5 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.5 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   5.7 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.7 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   5.7 |
-| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.1 |
-| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.0 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   8.3 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.4 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   6.1 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  15.8 |
-| COMPLETED Remove empty context                                              |         |       | 1:09 |   4.6 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |  14.7 |
-| STARTED Remove formatter id                                                 |         |       | 0:04 |   0.3 |
+| Stories                                                                     | 26:47   |       |      | 100.0 |
+| Active                                                                      |         | 26:47 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.4 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   9.3 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.2 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   6.6 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.4 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.2 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.0 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.7 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.3 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.4 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   5.4 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.6 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   5.4 |
+| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.0 |
+| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.9 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   7.8 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.2 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   5.7 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  14.8 |
+| COMPLETED Remove empty context                                              |         |       | 1:09 |   4.3 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |  13.8 |
+| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   5.0 |
+| STARTED Remove formatter id                                                 |         |       | 0:04 |   0.2 |
+| STARTED Generate formatter interfaces                                       |         |       | 0:19 |   1.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -531,6 +533,19 @@ Includes:
 After the large refactor we probably ended up with a lot of loose ends
 in quilt.cpp. Do a cursory review of the code.
 
+*** COMPLETED Clean up element segmentation                           :story:
+    CLOSED: [2016-09-30 Fri 12:37]
+    CLOCK: [2016-09-30 Fri 11:17]--[2016-09-30 Fri 12:37] =>  1:20
+
+Originally we added all element segments at the same level. But in
+truth:
+
+- there are always two segments;
+- one of which is the "master" segment: the one with "is element
+  extension" set to false.
+
+We should formalise this and make the configuration model reflect it.
+
 *** STARTED Remove formatter id                                       :story:
     CLOCK: [2016-09-28 Wed 22:49]--[2016-09-28 Wed 22:53] =>  0:04
 
@@ -538,6 +553,74 @@ Not clear why we need this given we have formatter name.
 
 Actually this requires a little bit of thinking as we use the id's in
 the helper formatters.
+
+*** STARTED Generate formatter interfaces                              :epic:
+    CLOCK: [2016-09-30 Fri 10:58]--[2016-09-30 Fri 11:17] =>  0:19
+
+We should create another template language, in addition to stitch:
+"wale". Wale is a very simple language that has templates that just do
+token replacement. The tokens must have a special format:
+={{{TOKEN}}}=. We receive a map of keys to values and do a blind
+replacement to the keys on the wale document.
+
+This links to stitch as follows:
+
+- create a single file implementation of a formatter. It will
+  implement both the provider interface and the appropriate formatter
+  interface. It will call the stitch method to start off with. There
+  are no headers, just cpp. It does the formatter registration.
+- add support in stitch for "named sections": its possible to start a
+  section and assign it a name. A stitch template will have two
+  sections: inclusion provision and formatting.
+- add support in stitch for "wale variables". These are just kvp's
+  defined at the top:
+
+: <#@ wale.variable="formatter_name=abcd" #>
+
+  wale variables and sections are converted into a kvp container for
+  wale input. Examples: facet, formatter name, etc.
+- convert the formatter code into a wale template, adding wale
+  variables as required.
+- update stitch to detect wale usage and to call wale in those
+  cases. This could be done by supplying a wale template:
+
+: <#@ wale.template="abcd.wale" #>
+
+- note that wale could be useful outside of stitch, for example for
+  dart: we could wale-lise utility and then instantiate it for a given
+  project.
+
+*Previous Understanding*
+
+It should be possible to generate some trivial types such as formatter
+interfaces, formatter container, registrar and so on. For this we
+need:
+
+- a mustache type template;
+- a set of fields from yarn types to be exposed to mustache;
+- a list of types to iterate through.
+
+Once we got this we could instantiate the templates. To integrate this
+with knit we would need some way of specifying which types the
+iteration would be over. We could mark a specific type with a given
+stereotype, and then supply say the base class ("all leaf descendants
+of xyz"). Dogen would then locate the descendants and for each call
+the template.
+
+For registrar and container its a bit trickier because we want a
+collection of types in one go.
+
+We also need a way to keep these templates away from the main (user
+visible) code, since they are useful only for dogen.
+
+See also [[https://github.com/cierelabs/boostache/tree/develop][boostache]].
+
+Notes:
+
+- we will need some "special" tags for copyright, includes
+  etc. Includes will be particularly special because we need to
+  augment the include list with additional includes. However, we may
+  not even need to be aware of this.
 
 *** Move enabled formatters to a higher level                         :story:
 
@@ -556,17 +639,6 @@ expressed as a stand alone formatting parameter.
 At present we are creating the formatter repository in
 =quilt.cpp=. However it will be shared by all backends in the
 kernel. Move it up to =quilt= level and supply it as a paramter to the backends.
-
-*** Clean up element segmentation                                     :story:
-
-Originally we added all element segments at the same level. But in
-truth:
-
-- there are always two segments;
-- one of which is the "master" segment: the one with "is element
-  extension" set to false.
-
-We should formalise this and make the configuration model reflect it.
 
 *** Move facet directory to a better place                            :story:
 
