--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,40 +13,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-30 Fri 23:53]
+#+CAPTION: Clock summary at [2016-10-01 Sat 22:50]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *29:28* |       |      | 100.0 |
+| *Total time*                                                                | *33:41* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 29:28   |       |      | 100.0 |
-| Active                                                                      |         | 29:28 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   2.8 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.4 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   8.5 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.1 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   6.0 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.2 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.1 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   2.8 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.5 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.1 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.3 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   4.9 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.6 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   4.9 |
-| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.9 |
-| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.8 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   7.1 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.0 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   5.2 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  13.5 |
-| COMPLETED Remove empty context                                              |         |       | 1:09 |   3.9 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |  12.6 |
-| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   4.5 |
+| Stories                                                                     | 33:41   |       |      | 100.0 |
+| Active                                                                      |         | 33:41 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   2.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.3 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   7.4 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.0 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   5.2 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.1 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.9 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   2.4 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.3 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.8 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.1 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   4.3 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.5 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   4.3 |
+| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.8 |
+| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.7 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   6.2 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.8 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   4.6 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  11.8 |
+| COMPLETED Remove empty context                                              |         |       | 1:09 |   3.4 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |  11.0 |
+| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   4.0 |
 | STARTED Remove formatter id                                                 |         |       | 0:04 |   0.2 |
-| STARTED Generate formatter interfaces                                       |         |       | 0:19 |   1.1 |
-| STARTED Get OSX build to compile code                                       |         |       | 2:41 |   9.1 |
+| STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.9 |
+| STARTED Get OSX build to compile code                                       |         |       | 6:54 |  20.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -624,6 +624,8 @@ Notes:
   not even need to be aware of this.
 
 *** STARTED Get OSX build to compile code                             :story:
+    CLOCK: [2016-10-01 Sat 20:31]--[2016-10-01 Sat 22:51] =>  2:20
+    CLOCK: [2016-10-01 Sat 12:30]--[2016-10-01 Sat 13:40] =>  1:10
     CLOCK: [2016-09-30 Fri 23:52]--[2016-10-01 Sat 00:35] =>  0:43
     CLOCK: [2016-09-30 Fri 22:05]--[2016-09-30 Fri 23:52] =>  1:47
     CLOCK: [2016-09-30 Fri 21:10]--[2016-09-30 Fri 22:04] =>  0:54
