--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,15 +14,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-03 Mon 23:06]
+#+CAPTION: Clock summary at [2016-10-04 Tue 09:59]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *52:45* |       |      | 100.0 |
+| *Total time*                                                                | *53:01* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 52:45   |       |      | 100.0 |
-| Active                                                                      |         | 52:45 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.8 |
+| Stories                                                                     | 53:01   |       |      | 100.0 |
+| Active                                                                      |         | 53:01 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   8.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
 | COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   4.7 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.6 |
@@ -30,7 +30,7 @@
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.7 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.6 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.5 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   0.9 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   0.8 |
 | COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.2 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   0.7 |
 | COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   2.7 |
@@ -57,7 +57,7 @@
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       | 0:01 |   0.0 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.6 |
 | STARTED Handle registration of services properly                            |         |       | 2:13 |   4.2 |
-| STARTED Expander refactor in =quilt.cpp=                                    |         |       | 2:10 |   4.1 |
+| STARTED Expander refactor in =quilt.cpp=                                    |         |       | 2:26 |   4.6 |
 | STARTED Create the notion of a formatter alias                              |         |       | 0:40 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1134,6 +1134,7 @@ Another way is to check if the type is generatable. If not, skip
 it. If we do it this way we need to wait for the generatable clean up.
 
 *** STARTED Expander refactor in =quilt.cpp=                          :story:
+    CLOCK: [2016-10-04 Tue 09:42]--[2016-10-04 Tue 09:58] =>  0:16
     CLOCK: [2016-10-03 Mon 22:30]--[2016-10-03 Mon 23:06] =>  0:36
     CLOCK: [2016-10-03 Mon 20:59]--[2016-10-03 Mon 22:29] =>  1:30
     CLOCK: [2016-10-03 Mon 20:53]--[2016-10-03 Mon 20:57] =>  0:04
